# rustodo

./: .env.example  .gitignore  Cargo.toml  docker-compose.yaml  readme.md
migrations/2024-04-22-031402_create_todos/: up.sql
src/: main.rs  todo.rs  todo_cli.rs  todo_controller.rs  todo_operator.rs
src/todo/: mod.rs  model.rs  repository.rs
src/tools/: mod.rs
