[package]
name = "rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
dialoguer = "0.11.0"
diesel = { version = "2.1.6", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.198", features = ["derive"] }
